2001-08-03  Keith Seitz  <keiths@redhat.com>

	* library/srcbar.itcl (_post): New method.
	(_update_file_menu): New method.
	(create_file_menu): Move the guts to _update_file_menu.
	Add a post command to the menu.
	* library/interface.tcl (gdbtk_tcl_file_changed): Catch the
	call to run_hooks.
	(gdbtk_tcl_exec_file_display): Save the new session, too.
	(set_exe_name): Don't bother saving the session here.
	(_close_file): Save the session here, too.
	(gdbtk_clear_file): Catch the call to run_hooks, too.
	* library/gdbmenubar.itcl (menubar_new_menu): Allow caller
	to specify optional arguments to be passed to Tk when
	creating the menu.
	Tk's "menu add" command returns an empty string. Save the
	menu's index in the parent instead. This is what all
	the menu subcommands want.

2001-08-02  Keith Seitz  <keiths@redhat.com>

	* generic/gdbtk-bp.c (gdb_get_breakpoint_info): Update
	with recent breakpoint structure changes in gdb.
	(gdb_set_bp_addr): Likewise.
	(gdb_get_tracepoint_info): Update with recent tracepoint
	structure changes in gdb.

2001-07-31  Elena Zannoni  <ezannoni@redhat.com>

	* generic/gdbtk-cmds.c: Don't include regcache.h.
	* generic/gdbtk-register.c: Include regcache.h.
	
2001-07-26  Jonathan Larmour  <jlarmour@redhat.com>

	* library/prefs.tcl (pref_set_defaults): Add additional entry
	points for eCos if main is not present.

2001-07-21  Martin M. Hunt  <hunt@redhat.com>

	* library/interface.tcl (gdbtk_locate_main): Fix function 
	so that it returns either a null string or a valid location,
	as documented.

	* library/variables.tcl (build_menu_helper): Set
	the Format menu option to "disabled" initially.

2001-07-20  Martin M. Hunt  <hunt@redhat.com>

	* library/managedwin.itb: Revert to global to properly
	initialize geometry with some window managers.
	* library/managedwin.ith (shutdown): Remove _geometry.

	* library/memwin.itb: Fix syntax to open a new window
	using the "-force" flag.

	* generic/gdbtk-register.c (gdb_regnames): Fix 'if'