@@ -1,3 +1,12 @@
+2001-08-09  Keith Seitz  <keiths@redhat.com>
+
+	* library/prefs.tcl (pref_set_defaults): Add new font
+	color defaults for highlighting, headers, selecting, and "normal".
+	Get rid of gdb/variable/highlight_fg and gdb/reg/highlight_fg.
+	* library/variables.tcl (build_win): Use gdb/font/highlight_fg
+	and gdb/font/highilght_bg to set highlight style.
+	* library/memwin.itb (build_win): Use header_fg and header_bg.
+
 2001-08-03  Keith Seitz  <keiths@redhat.com>
 
 	* library/srcbar.itcl (_post): New method.
